Update content from lab class ECMASCRIPT pp

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>Modules</h1>
 
-    <script src="./main.js" type="module"></script>
+    <!-- <script src="./main.js" type="module"></script>
+    <script src="./class1.js"></script>
+    <script src="./def.js"></script>
+    <script src="./rest.js"></script>
+    <script src="./spread.js"></script> -->
+    <script src="./clos.js"></script>
   </body>
 </html>
