--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="./class1.js"></script>
     <script src="./def.js"></script>
     <script src="./rest.js"></script>
-    <script src="./spread.js"></script> -->
-    <script src="./clos.js"></script>
+    <script src="./spread.js"></script>
+    <script src="./clos.js"></script> -->
+    <script src="./clos2.js"></script>
   </body>
 </html>
